restructured the project directory folder, fixed encryption bug

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 DATABASE_URL=
 APP_PORT=
 BCRYPT_ROUND=
+# Generate JWT_SECRET using generate_secret_key config file
 JWT_SECRET=
+# Generate CRYPTO_SECRET_KEY using generate_secret_key config file
 CRYPTO_SECRET_KEY=
+# Generate CRYPTO_IV using generate_iv config file
+CRYPTO_IV=
