--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_PORT=
 BCRYPT_ROUND=
 # Generate JWT_SECRET using generate_secret_key config file
 JWT_SECRET=
+JWT_EXPIRES_IN=
 # Generate CRYPTO_SECRET_KEY using generate_secret_key config file
 CRYPTO_SECRET_KEY=
 # Generate CRYPTO_IV using generate_iv config file
