--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-DATABASE_URL=
-APP_PORT=
-BCRYPT_ROUND=
+DATABASE_URL="mysql://user:password@localhost:3306/yourdatabase"
+APP_PORT=port
+BCRYPT_ROUND=12-14
 # Generate JWT_SECRET using generate_secret_key config file
-JWT_SECRET=
-JWT_EXPIRES_IN=
+JWT_SECRET=secret
+JWT_EXPIRES_IN=1h
 # Generate CRYPTO_SECRET_KEY using generate_secret_key config file
-CRYPTO_SECRET_KEY=
+CRYPTO_SECRET_KEY=key
 # Generate CRYPTO_IV using generate_iv config file
-CRYPTO_IV=
+CRYPTO_IV=iv
